<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WacomInkingToolsConfiguratorForAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="velocity_configuration_label">Velocity configuration</string>
    <string name="pressure_configuration_label">Pressure configuration</string>
    <string name="velocity_function_label">Velocity function</string>
    <string name="pressure_function_label">Pressure function</string>
    <string name="minradius">Min radius</string>
    <string name="maxradius">Max radius</string>
    <string name="min_alpha">Min alpha</string>
    <string name="max_alpha">Max alpha</string>
    <string name="minvalue">Min</string>
    <string name="maxvalue">Max</string>
    <string name="minvelocity">Min velocity</string>
    <string name="maxvelocity">Max velocity</string>
    <string name="minpressure">Min pressure</string>
    <string name="maxpressure">Max pressure</string>
    <string name="texture_switch">Texture</string>
    <string name="pressure_switch">Pressure</string>
    <string name="reverse">Reverse</string>
    <string name="exponential">Exponential</string>
    <string name="sigmoid">Sigmoid</string>
    <string name="periodic">Periodic</string>
    <string name="startradius">Start radius</string>
    <string name="endradius">End radius</string>
    <string name="smoothing_radius">Smoothing R.</string>
    <string name="start_alpha">Start alpha</string>
    <string name="end_alpha">End alpha</string>
    <string name="smoothing_alpha">Smoothing A.</string>
    
    <string name="texture_title">Texture configuration</string>
    <string name="texture_fill">Fill source</string>
    <string name="texture_shape">Shape source</string>
    <string name="texture_dimensions">128x128px</string>
    <string name="texture_spacing">Spacing</string>
    <string name="texture_scattering">Scattering</string>
    <string name="texture_max_blend">Max blend</string>
    <string name="texture_rotation">Rotation</string>
    <string name="texture_rotation_off">Off</string>
    <string name="texture_rotation_random">Random</string>
    <string name="texture_rotation_trajectory">Trajectory</string>
    
    <string name="exportinfo">The tool name must contain only alphanumeric characters. The tool identifier must be a positive number.</string>
    <string name="export_dialog_title">Input your tool metadata!</string>
    <string name="na"></string>
    <string name="tool_name_hint">Enter a tool name</string>
    <string name="tool_identifier_hint">Enter a tool identifier</string>
    <string name="export_dialog_btn_ok">OK</string>
    <string name="export_dialog_btn_cancel">Cancel</string>
    <string name="tabVelocityConfig">Velocity config</string>
    <string name="tabPressureConfig">Pressure config</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_export">Export</string>
    <string name="export_intent_chooser_title">Select export destination</string>
</resources>