<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/export_dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportinfo" 
        android:padding="@dimen/export_dialog_export_info_padding"/>

    <EditText
        android:id="@+id/export_dialog_tool_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tool_name_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/export_dialog_tool_identifier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tool_identifier_hint"
        android:inputType="number" >
    </EditText>

</LinearLayout>