<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.wacom.toolsconfigurator"
    android:layout_width="@dimen/toolConfigViewWidth"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnReset"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="onBtnResetClicked"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btnExport"
            android:visibility="gone"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="onBtnExportClicked"
            android:text="@string/btn_export" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >

            <com.wacom.toolsconfigurator.ui.TintableImageView
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/na"
                android:onClick="onBtnClearClicked"
                android:src="@drawable/btn_clear"
                app:tint="@color/custom_imageview_color_selector" />

            <com.wacom.toolsconfigurator.ui.TintableImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/na"
                android:onClick="onBtnCloseConfigClicked"
                android:src="@drawable/btn_close"
                app:tint="@color/custom_imageview_color_selector" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:gravity="center_vertical" >

                <Space
                    android:layout_width="@dimen/spacing"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/texture_switch"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Space
                    android:layout_width="@dimen/spacing"
                    android:layout_height="match_parent" />

                <Switch
                    android:id="@+id/switchTexture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/pressure_switch"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Space
                    android:layout_width="@dimen/spacing"
                    android:layout_height="match_parent" />

                <Switch
                    android:id="@+id/switchPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical" />

                <Space
                    android:layout_width="@dimen/spacing"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <include
                android:id="@+id/velocityToolSettings"
                layout="@layout/tool_settings" />

            <include
                android:id="@+id/pressureToolSettings"
                layout="@layout/tool_settings" />

            <LinearLayout
                android:id="@+id/textureToolSettings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_height"
                    android:gravity="left|center_vertical" >

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texture_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/holo_blue_dark" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/textureFill"
                        layout="@layout/texture_selection"
                        android:layout_weight="1"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <include
                        android:id="@+id/textureShape"
                        layout="@layout/texture_selection"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_height"
                    android:gravity="center" >

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/texture_spacing"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.SeekBarWithTextField
                        android:id="@+id/seekBarTextureSpacing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/textureSpacingValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/infobox_padding_left"
                        android:paddingRight="@dimen/infobox_padding_right"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.TintableImageView
                        android:id="@+id/btnDecTextureSpacing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/na"
                        android:src="@drawable/btn_arrow_left"
                        android:tag="@string/tag_texture_spacing"
                        app:tint="@color/custom_imageview_color_selector2" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.TintableImageView
                        android:id="@+id/btnIncTextureSpacing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/na"
                        android:src="@drawable/btn_arrow_right"
                        android:tag="@string/tag_texture_spacing"
                        app:tint="@color/custom_imageview_color_selector2" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_height"
                    android:gravity="center" >

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/texture_scattering"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.SeekBarWithTextField
                        android:id="@+id/seekBarTextureScattering"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/textureScatteringValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/infobox_padding_left"
                        android:paddingRight="@dimen/infobox_padding_right"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.TintableImageView
                        android:id="@+id/btnDecTextureScattering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/na"
                        android:src="@drawable/btn_arrow_left"
                        android:tag="@string/tag_texture_scattering"
                        app:tint="@color/custom_imageview_color_selector2" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <com.wacom.toolsconfigurator.ui.TintableImageView
                        android:id="@+id/btnIncTextureScattering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/na"
                        android:src="@drawable/btn_arrow_right"
                        android:tag="@string/tag_texture_scattering"
                        app:tint="@color/custom_imageview_color_selector2" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_height"
                    android:gravity="center_vertical" >

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:text="@string/texture_max_blend"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <Switch
                        android:id="@+id/switchTextureMaxBlend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/row_height"
                    android:gravity="center_vertical" >

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:text="@string/texture_rotation"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Space
                        android:layout_width="@dimen/spacing"
                        android:layout_height="match_parent" />

                    <RadioGroup
                        android:id="@+id/textureRotation"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioBtnTextureRotationOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/texture_rotation_off"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/radioBtnTextureRotationRandom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/texture_rotation_random"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/radioBtnTextureRotationTrajectory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/texture_rotation_trajectory"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        
                        <Space
                            android:layout_width="@dimen/spacing"
                            android:layout_height="match_parent" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>